objects/ContactRequest.object
<CustomObject>
    <fields>
        <fullName>CR_Five__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CR Five</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CR_Four__c</fullName>
        <label>CR Four</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CR_One__c</fullName>
        <label>CR One</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_Three__c</fullName>
        <label>CR Three</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CR_Two__c</fullName>
        <label>CR Two</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>My_ContactRequests</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contact Requests</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>